# Parallel_SIFT

./: .gitignore  CMakeLists.txt  README.md  general_tools.py
include/: GaussianBlur.h  Image.h  Keypoint.h  LoG.h  Point.h  cv_helpers.h  cv_helpers.hpp  general_helpers.h  general_helpers.hpp  helpers.hpp
src/: FeatureGeneration.cpp  GaussianBlur.cpp  Image.cpp  Keypoint.cpp  LoG.cpp  cv_helpers.cpp  general_helpers.cpp  main.cpp  parallel_shrink.cpp  testLoG.cpp  test_gaussian_blur.cpp  test_log_opencv.cpp  test_openmp.cpp  test_separable_kernel.py
